Changes for SQL::Translator
 * Add support for add_field in SQL::Translator::Producer::SQLServer
 * Add support for monotonically increasing SQLite autoincs (GH#47)
 * Declare dependencies in deterministic order (RT#102859)

0.11021 2015-01-29

 * Fix Oracle producer generating an unnecessary / at the end in case there
   are no triggers
 * Skip HTML tests if CGI is not installed (RT#98027)
 * Fix JSON and YAML tests if the defaults have been tweaked (RT#98824)
 * Fixes for parsing and producing identifiers and values that need
   quoting and escaping for SQLite, MySQL, PostgreSQL, SQLServer and
   Oracle (RT#90700, RT#31034)
 * Add support for ALTER TABLE ... ADD CONSTRAINT to Oracle parser
 * Add trigger support to Oracle parser (RT#62927)
 * Fix erroneous PostgreSQL floating point type translations (RT#99725)
 * Remove executable bit from Parser/JSON.pm (RT#100532)
 * Update the Free Software Foundation's address (RT#100531)
 * Provide default index names for SQLite (GH#45)
 * Fix SQLite diffing on perl 5.8.1
 * Fix multi-column indexes in Parser::DBI::PostgreSQL
 * Fix array data types in Parser::PostgreSQL (GH#49)
 * Fix multidimensional sizes in Parser::PostgreSQL

0.11020 2014-09-02

 * Fix test failure if Test::PostgreSQL is installed but not working

0.11019 2014-09-02

 * Add Json and hstore types to Pg Parser (cloudinstustrie)
 * Fix DROP TABLE in SQL Server Producer
 * Fix Pg DBI parser test (Dagfinn Ilmari Mannsåker)
 * Remove spurious warnings (Matt Phillips, Wallace Reis)
 * Fix MySQL producer for columns with scalar ref in 'ON UPDATE' (Wallace Reis)
 * Fix handling of views in MySQL DBI parser
 * Fix handling of renamed fields in SQLite diff (Peter Mottram)
 * Check numeric equality of default values in numeric-type fields (Wallace Reis)
 * Fix handling of renamed fields in renamed tables in Pg diff (Peter Mottram)

0.11018 2013-10-31 🎃

 * Revert "Fix AUTOINCREMENT in SQLite"

0.11017 2013-10-30
